<resources>
    <string name="app_name">Weather Up</string>
    <string name="title_home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="favourites">Favourites</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="celzious">Celzious</string>
    <string name="fehrenhite">Fehrenhite</string>
    <string name="m_sec">m/sec</string>
    <string name="miles_h">miles/h</string>
    <string name="wind">Wind</string>
    <string name="nodangerous">No Dangerous Alerts for now.</string>
    <string name="alert">Alert</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="now">Now</string>
    <string name="feelsLike">Feels like 20.4°C</string>
    <string name="cM">C° - meter/sec wind speed</string>
    <string name="kM">K° - meter/sec wind speed</string>
    <string name="fM">F° - miles/hour wind speed</string>
    <string name="c">°C</string>
    <string name="k">°K</string>
    <string name="f">°F</string>
    <string name="ms">m/s</string>
    <string name="mh">M/h</string>
    <string name="pa">Pa</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="messageDel">Are you sure to delete it?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="youHave">You have to put mark on place to add it!</string>
    <string name="settings">Settings</string>
    <string name="weatherlocation">Weather Location</string>
    <string name="usedevicelocation">Use Device Location</string>
    <string name="allow">Allow Weather Up to get your location</string>
    <string name="maplocation">Map Location</string>
    <string name="thelocation">The location for which the weather is displayed</string>
    <string name="units">Units</string>
    <string name="language">Language</string>
    <string name="noity">Notifications</string>
    <string name="allownoty">Allow Notification</string>
    <string name="alarmm">Alarm</string>
    <string name="enable">Enable Alarm Notification</string>

</resources>